--- a/Week #3.ipynb
+++ b/Week #3.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = @(t,Y) [Y(2); -sin(Y(1))];\n",
